<resources>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>

    <string name="onboarding_title1">Order Anytime</string>
    <string name="onboarding_title2">Order Status</string>
    <string name="onboarding_title3">Earn &amp; Win</string>

    <string name="new_onboarding_title1">Riggle Karo</string>
    <string name="new_onboarding_title2">Riggle Coins</string>
    <string name="new_onboarding_title3">Riggle Credit</string>

    <string name="onboarding_text1">Fast and Easy way of ordering top brands for your store</string>
    <string name="onboarding_text2">Check status of your order easily on the app</string>
    <string name="onboarding_text3">- Get Riggle coins on every completed order and referrals.\n- Redeem them on your next order.</string>

    <string name="new_onboarding_text1">- Order Quality Products\n- Get Great Margins\n- From Trusted Service Partners</string>
    <string name="new_onboarding_text2">- Earn Riggle Coins on all orders\n- Redeem for discount vouchers on next order\n- More you order, more you earn</string>
    <string name="new_onboarding_text3">- Easy credit based on transactions\n- Short-team credit at 0% insterest rate\n- Easy Documentation</string>

    <string name="welcome_to_riggle">Welcome to riggle</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="text_continue">continue</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="please_enter_otp">Please enter the OTP we sent on:</string>
    <string name="verify">Verify</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_subtext">In order to serve you better we need a little more info</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="enter_store_name">Enter Store Name</string>
    <string name="store_type">Store Type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="active_orders">Active Orders</string>
    <string name="account">Account</string>
    <string name="rewards">Rewards</string>
    <string name="version">Version</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="invite_your_friends">Invite your friends</string>
    <string name="earn_points">Earn 200 point for each time your friend downloads the app</string>
    <string name="invite">Invite</string>
    <string name="my_orders">My orders</string>
    <string name="my_earnings">My Earnings</string>
    <string name="contact_us">Contact Us</string>
    <string name="add_members">Add Members</string>
    <string name="add_member">Add Member</string>
    <string name="total_members_added">Total Members Added</string>
    <string name="active_license_summary">Active license summary</string>
    <string name="add_member_popup_text">Make sure the new user registers with the same credentials as above</string>
    <string name="phone_no">Phone no.</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="enter_phone_number_here">Enter phone number here</string>
    <string name="role">Role</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove</string>
    <string name="remove_user_dialog_subtext">This user will be permanently removed from your organisation</string>
    <string name="delivering_to">Delivering to</string>
    <string name="value_products">%d products</string>
    <string name="rupees_value">₹%d</string>
    <string name="rupees_value_double">₹%.2f</string>
    <string name="rupees_value_profit">₹%d Profit</string>
    <string name="rupees_value_profits">₹%.2f Profit</string>
    <string name="mrp">MRP:</string>
    <string name="earn_value">Earn %d</string>
    <string name="points_on_this_purchase">coins/piece on this purchase</string>
    <string name="points_on_every_value_packs">points on every %d packs</string>
    <string name="value_off">₹%d off</string>
    <string name="moq">MOQ:</string>
    <string name="top_picks_for_you">Top Picks for you</string>
    <string name="shop_by_brands">Shop By Brands</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="all_products">All Products</string>
    <string name="view_all">View All</string>
    <string name="done">done</string>
    <string name="error">Error</string>
    <string name="value_items_added_to_cart">%s Items added to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="points_for_this_order">rewards points for this order</string>
    <string name="coins_for_this_order">riggle coins for this order</string>
    <string name="margin">Margin:</string>
    <string name="delivery_between_3_4_days">Delivery between 1-7 days</string>
    <string name="price_details">Price Details</string>
    <string name="price_value_items">Price (%d item)</string>
    <string name="discount">Discount</string>
    <string name="apply_riggle_coins">Apply Riggle coins</string>
    <string name="available_coins_value">(Eligible coins: %d)</string>
    <string name="total_amount">Total Amount</string>
    <string name="proceed">proceed</string>
    <string name="proceed_to_pay">proceed to pay</string>
    <string name="pay_value">Pay ₹%.2f</string>
    <string name="add_address">Add Address</string>
    <string name="choose_Your_delivery_slot">Choose your delivery slot</string>
    <string name="address">Address</string>
    <string name="enter_complete_address_here">Enter Complete address here</string>
    <string name="pin_code">Pin Code</string>
    <string name="product">Product</string>
    <string name="units">Units:</string>
    <string name="variants">Variants:</string>
    <string name="about_this_product">about this product</string>
    <string name="expiry_date">Expiry Date:</string>
    <string name="order_id">Order ID:</string>
    <string name="value_more_items_in_this_order">+ %d More items in this order</string>
    <string name="order_details">Order Details</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="go_to_my_orders">Go to my orders</string>
    <string name="riggle_coins_discount">Riggle Coins Discount</string>
    <string name="mode_of_payment">Mode of Payment:</string>
    <string name="in_your_order">In your Order</string>
    <string name="call_customer_support">Call customer support</string>
    <string name="contact_us_supporting_text">In order to edit your details please contact our support below</string>
    <string name="call_support">Call Support</string>
    <string name="search_hint">Search for product, brand</string>
    <string name="speech_to_text">Listening... \n Speak up to type</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="looks_like_you_have_no_orders_yet">Looks like you have no orders yet!</string>
    <string name="minus_with_space">- </string>
    <string name="error_order_details">Error in order details, please contact suppoprt.</string>
    <string name="error_store_info">Store information error, please contact support.</string>
    <string name="number_support">9899-008-373</string>
    <string name="owner_name">Owner Name</string>
    <string name="store_name">Store Name</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="dummy_number">123456789</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="additional_info">Additional Info</string>
    <string name="gstn_number">GSTN Number</string>
    <string name="about_your_store">About your store</string>
    <string name="about_store">About Store</string>
    <string name="camera">Camera</string>
    <string name="select_document_upload_option">Select document upload option</string>
    <string name="gallery">Gallery</string>
    <string name="no_more_history">No more history</string>
    <string name="view_order_details">View order details</string>
    <string name="role_type">Role Type</string>
    <string name="trending">Trending</string>
    <string name="loading">Loading...</string>
    <string name="try_again">Try again</string>
    <string name="top_searches">Top Searches</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="yes">Yes</string>
    <string name="login">Login</string>
    <string name="qty">Qty:</string>
    <string name="cancelled">Cancelled</string>
    <string name="area">Area</string>
    <string name="sub_area">Sub Area</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="pending_amount">Pending Amount</string>
    <string name="riggle_coin_earned">Riggle Coins Earned</string>
    <string name="_919930286991">+919930286991</string>
    <string name="we_are_working_hard_to_be_serviceable">We are working hard to be serviceable in area soon.\nThank you for your patience.</string>
    <string name="credit">Credit</string>
    <string name="product_image">Product Images</string>
    <string name="bill_details">Bill Details</string>
    <string name="cart_total">Cart Total</string>
    <string name="offer_discount">Offer Discount</string>
    <string name="offers_for_you">Offers for you:</string>
    <string name="order_history">Order History</string>
    <string name="live_orders">Live Orders</string>
    <string name="update_mix">Update Mix</string>
    <string name="cancellation_reason">Cancellation Reason</string>
    <string name="cancel_order">Cancel Order</string>

</resources>