<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_remove_warning" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/font_semibold"
            android:text="@string/call_customer_support"
            android:textColor="@color/black_85"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_919930286991"
            android:fontFamily="@font/font_semibold"
            android:textColor="@color/black_85"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/font_regular"
            android:gravity="center"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/contact_us_supporting_text"
            android:textColor="@color/black_85"
            android:textSize="12sp" />


        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_corner_16dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/font_medium"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/call_support"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_medium"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>