<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semibold"
            android:text="@string/select_document_upload_option"
            android:textColor="@color/black_85"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cameraTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:background="@drawable/rounded_4dp_border_disabled"
                android:fontFamily="@font/font_bold"
                android:layout_marginEnd="8dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/camera"
                android:textColor="@color/black_85"
                app:drawableStartCompat="@drawable/ic_baseline_camera_alt_24" />

            <TextView
                android:id="@+id/galleryTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/font_bold"
                android:background="@drawable/rounded_4dp_border_disabled"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/gallery"
                android:textColor="@color/black_85"
                app:drawableStartCompat="@drawable/ic_baseline_insert_photo_24" />
        </LinearLayout>



        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:fontFamily="@font/font_medium"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>